syntax = "proto3";

package proto;

service Bot {

    rpc GetResponse(BotRequest) returns (BotResponse) {}
}

message BotRequest {
    string id = 1;
    string text = 2;
    string name = 3;
}

message BotResponse {
    string id = 1;
    string text = 2;
}